# tamata

./: Cargo.toml  LICENSE  README.md
examples/: turnstile.rs
src/: lib.rs
tamata-core/: Cargo.toml
tamata-core/src/: lib.rs
tamata-macros/: Cargo.toml
tamata-macros/src/: lib.rs
