[package]
name = "tamata"
version = "0.1.0"
authors = ["Joe Ranweiler <joe@lemma.co>"]
edition = "2018"
license = "ISC"
repository = "https://github.com/ranweiler/tamata"
description = "A library for event-driven finite state machines"

[dependencies]
tamata-core = { version = "0.1.0", path = "./tamata-core" }
tamata-macros = { version = "0.1.0", path = "./tamata-macros" }

[dev-dependencies]
anyhow = "1.0"